package com.vamshi.oop;

//single inheritance,single parent and single child
//parent class
class A{

}
//child class
class B extends A{

}
public class InheritanceDemo {
}
