package com.vamshi.oop;

public class psudoAdd extends Addition{
    public static int findSum(int a, int b){
     return a+b;
 }
}
