@startuml

title __JAVAOOP's Class Diagram__\n

  namespace com.vamshi.oop {
    class com.vamshi.oop.A {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.AbstractionDemo {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.Addition {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.Addition1 {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.AgentTicketBooking {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.AggregationDemo {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.Apple {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.B {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.BankAccount {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.College {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.CompositionDemo {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.DIPDemo {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.DelegationDemo {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.Demo {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.EncapsulationDemo {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.Fan {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.FlightBooking {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.House {
    }
  }
  

  namespace com.vamshi.oop {
    interface com.vamshi.oop.ILogger {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.InheritanceDemo {
    }
  }
  

  namespace com.vamshi.oop {
    interface com.vamshi.oop.InterfaceDemo {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.JavaExample {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.Kitchen {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.LSPDemo {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.Logger {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.LogginIntoDB {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.LogginIntoFile {
    }
  }
  

  namespace com.vamshi.oop {
    interface com.vamshi.oop.Mobile {
    }
  }
  

  namespace com.vamshi.oop {
    abstract class com.vamshi.oop.Mobile1 {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.OverloadingDemo {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.OverridingDemo {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.Samsung {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.Teacher {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.TrainBooking {
    }
  }
  

  namespace com.vamshi.oop {
    interface com.vamshi.oop.TravelBooking {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.Vehicle {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.bird {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.car {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.ostrich {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.psudoAdd {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.sparrow {
    }
  }
  

  namespace com.vamshi.oop {
    class com.vamshi.oop.test {
    }
  }
  

  namespace com.vamshi.oop {
    abstract class com.vamshi.oop.testabs {
    }
  }
  

  namespace com.vamshi.test {
    class com.vamshi.test.JavaExample {
    }
  }
  

  com.vamshi.oop.AgentTicketBooking .up.|> com.vamshi.oop.TravelBooking
  com.vamshi.oop.AgentTicketBooking o-- com.vamshi.oop.TravelBooking : t
  com.vamshi.oop.Apple .up.|> com.vamshi.oop.Mobile
  com.vamshi.oop.B -up-|> com.vamshi.oop.A
  com.vamshi.oop.FlightBooking .up.|> com.vamshi.oop.TravelBooking
  com.vamshi.oop.House o-- com.vamshi.oop.Kitchen : kitchen
  com.vamshi.oop.Logger .up.|> com.vamshi.oop.ILogger
  com.vamshi.oop.LogginIntoDB o-- com.vamshi.oop.ILogger : logger
  com.vamshi.oop.LogginIntoFile o-- com.vamshi.oop.ILogger : logger
  com.vamshi.oop.Samsung -up-|> com.vamshi.oop.Mobile1
  com.vamshi.oop.TrainBooking .up.|> com.vamshi.oop.TravelBooking
  com.vamshi.oop.car -up-|> com.vamshi.oop.Vehicle
  com.vamshi.oop.ostrich -up-|> com.vamshi.oop.bird
  com.vamshi.oop.psudoAdd -up-|> com.vamshi.oop.Addition
  com.vamshi.oop.sparrow -up-|> com.vamshi.oop.bird
  com.vamshi.oop.test .up.|> com.vamshi.oop.InterfaceDemo


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
